<resources>
    <string name="app_name">InteriorTalk</string>
    <string name="facebook_app_id">437274607377803</string>
    <string name="fb_login_protocol_scheme">fb437274607377803</string>

    <string name="subtitle">ver 1.0</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="please_enter_new_id">이메일</string>
    <string name="please_enter_password">비밀번호</string>
    <string name="member_login">회원 로그인</string>
    <string name="do_register">가입하기</string>
    <string name="welcome">님, 안녕하세요</string>
    <string name="bathroom">욕실</string>
    <string name="living_room">거실</string>
    <string name="bedroom">침실</string>
    <string name="kitchen">주방</string>
    <string name="all">ALL</string>
    <string name="see_menu">메뉴를 봅니다</string>

    <string name="category">카테고리</string>
    <string name="my">My</string>
    <string name="my_post">나의 포스트</string>
    <string name="logout">로그아웃</string>
    <string name="write_post">포스트를 작성합니다</string>
    <string name="selected_picture">선택된 사진</string>
    <string name="please_select_picture">자랑하고 싶은 사진을 올려주세요</string>
    <string name="please_touch_furniture">자랑하고 싶은 가구를 터치하세요</string>
    <string name="upload_picture">사진 업로드</string>
    <string name="add_label">라벨 추가</string>
    <string name="purchase_url">구매 링크</string>
    <string name="furniture_title">가구명</string>
    <string name="please_introduce_interior">인테리어에 대해 소개해주세요</string>
    <string name="post_title">제목</string>
    <string name="interior_introduction">인테리어 소개</string>
    <string name="write">작성</string>
    <string name="post_interior_picture">포스트의 인테리어 사진</string>
    <string name="ranking">랭킹</string>
    <string name="interior_picture">인테리어 사진</string>
    <string name="label_number">라벨 넘버</string>
    <string name="confirm">확인</string>
    <string name="like_it">좋아요!</string>
    <string name="comment">댓글</string>
    <string name="ea">개</string>
    <string name="write_comment">댓글 쓰기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service">서비스</string>
    <string name="qna">QnA</string>
    <string name="write_question">질문을 작성합니다</string>
    <string name="do_question">질문하기</string>
    <string name="do_answer">답변하기</string>

</resources>