<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#433"
    android:orientation="vertical"
    tools:context=".PictureFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/please_touch_furniture"
        android:textColor="#CCC" />

    <!-- 선택된 이미지 -->
    <com.holy.interiortalk.widgets.LabelableImageView
        android:id="@+id/img_selected_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/selected_picture"
        android:scaleType="fitCenter" />

    <!-- Button : 확인 -->
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="end"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/confirm" />

</LinearLayout>