<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nanum_pen_script"
        android:text="@string/add_label"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/edit_furniture_title"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="#8B7"
        android:elevation="2dp"
        android:hint="@string/furniture_title"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="#FFF"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_purchase_url"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:autofillHints=""
        android:background="#8B7"
        android:elevation="2dp"
        android:hint="@string/purchase_url"
        android:inputType="textUri"
        android:padding="10dp"
        android:textColorHint="#FFF"
        android:textSize="14sp" />

</LinearLayout>