<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nanum_pen_script"
        android:text="@string/register"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/edit_register_email"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="#8B7"
        android:elevation="2dp"
        android:hint="@string/please_enter_new_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#FFF"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_password"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:background="#8B7"
        android:elevation="2dp"
        android:focusedByDefault="false"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#FFF"
        android:textSize="14sp" />

</LinearLayout>