<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343"
    android:orientation="vertical"
    tools:context=".PostFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/please_introduce_interior"
        android:textColor="#CCC" />

    <!-- 작성 레이아웃 -->
    <RelativeLayout
        android:id="@+id/img_selected_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <Spinner
            android:id="@+id/spinner_post_tag"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:background="#AAA" />

        <!-- EditText : 포스트 제목 -->
        <EditText
            android:id="@+id/edit_post_title"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@id/spinner_post_tag"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="#AAA"
            android:hint="@string/post_title"
            android:inputType="text"
            android:padding="8dp" />

        <!-- EditText : 포스트 내용 -->
        <EditText
            android:id="@+id/edit_post_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/edit_post_title"
            android:autofillHints=""
            android:background="#AAA"
            android:gravity="top"
            android:hint="@string/interior_introduction"
            android:inputType="text"
            android:padding="8dp" />

        <!-- Button : 작성 완료 -->
        <Button
            android:id="@+id/btn_submit_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/write" />

    </RelativeLayout>


</LinearLayout>